force-app/main/default/objects/nFORCE__Transaction__c/fields/nFORCE__Attribute_2__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Attribute_2__c</fullName>
    <description>Billable attribute not captured in another field</description>
    <label>Attribute_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>