force-app/main/default/objects/nFORCE__Transaction__c/fields/nFORCE__Category__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Category__c</fullName>
    <description>The field is optional. The primary category used for sorting transactions.</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>