force-app/main/default/objects/nFORCE__Transaction__c/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>It contains the Human-readable title</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>