force-app/main/default/objects/nFORCE__Transaction__c/fields/nFORCE__Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Reference_Id__c</fullName>
    <description>The field contains the ID of the context object associated with the transaction.</description>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>