force-app/main/default/objects/nFORCE__Transaction__c/fields/nFORCE__Result__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Result__c</fullName>
    <description>The field contains the specific result of the transaction. The field typically contains more detail about the transaction result and what is conveyed by the Result Type field. For example it can indicate the reason for a failure in this field.</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>