force-app/main/default/objects/nFORCE__Transaction__c/fields/nFORCE__Result_Message__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Result_Message__c</fullName>
    <description>The field contains a readable message that conveys the result of the transaction.</description>
    <label>Result Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>