force-app/main/default/objects/nFORCE__Transaction__c/listViews/CLA_Queue_Transaction.listView-meta.xml
<ListView>
    <fullName>CLA_Queue_Transaction</fullName>
    <filterScope>Queue</filterScope>
    <label>CLA Queue</label>
    <queue>CLA_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>